--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html,
 body {
     background-color: var(--body-bg);
     height: 100%;
-    color: darkgray !important;
+    color: lightgray !important;
     font-family: Roboto, Arial, sans-serif;
 }
 
@@ -16,8 +16,13 @@ body {
     background-position: center center;
 }
 
+.heading {
+    font-size: 40px;
+    font-weight: 300;
+}
+
 .stopwatch {
-    font-size: 80px;
+    font-size: 70px;
     font-family: 'Barlow', sans-serif;
     font-weight: 600;
     font-variant-numeric: tabular-nums;
@@ -27,18 +32,39 @@ body {
     background-color: #F88E49;
     color: white;
     font-weight: 500;
+    border: none;
+}
+
+#start:focus {
+    border-color: #F88E49 !important;
+    outline: 0px;
+    box-shadow: #f88f49da 0px 0px 0px 0.25rem !important;
 }
 
 #record {
     background-color: #D45E64;
     color: white;
     font-weight: 500;
+    border: none;
+}
+
+#record:focus {
+    border-color: #D45E64 !important;
+    outline: 0px;
+    box-shadow: #D45E64da 0px 0px 0px 0.25rem !important;
 }
 
 #reset {
     background-color: #96446D;
     color: white;
     font-weight: 500;
+    border: none;
+}
+
+#reset:focus {
+    border-color: #96446D !important;
+    outline: 0px;
+    box-shadow: #96446Dda 0px 0px 0px 0.25rem !important;
 }
 
 .form-check-input:checked {
@@ -54,9 +80,18 @@ body {
 
 textarea {
     font-size: 15px !important;
-    width: 300px !important;
-    height: 200px !important;
-    white-space: pre-wrap !important;
+    padding: 1rem;
+    border: none;
+    border-radius: 0.25rem;
+    color: gray !important;
+}
+
+textarea:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #141F37;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem #141f37d6;
 }
 
 #content {
@@ -90,4 +125,35 @@ footer>a {
 
 button {
     width: 28% !important;
+}
+
+/* Media Queries */
+/* Tablets and Up (768px and above) */
+@media (max-width: 768px) {
+    textarea {
+        font-size: 16px !important;
+        width: 300px !important;
+        min-height: 150px !important;
+        max-height: 300px !important;
+    }
+}
+
+/* Laptops and Up (992px and above) */
+@media (min-width: 992px) {
+    textarea {
+        font-size: 17px !important;
+        width: 400px !important;
+        min-height: 200px !important;
+        max-height: 300px !important;
+    }
+}
+
+/* Large Laptops and Desktops (1200px and above) */
+@media (min-width: 1200px) {
+    textarea {
+        font-size: 18px !important;
+        min-width: 400px !important;
+        min-height: 200px !important;
+        max-height: 300px !important;
+    }
 }
