--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     height: 100%;
     color: lightgray !important;
     font-family: Roboto, Arial, sans-serif;
+    overflow: hidden;
 }
 
 /* Background and Flexbox styling for Body */
